--- a/C152X/manifest.json
+++ b/C152X/manifest.json
@@ -8,8 +8,8 @@
   "content_type": "AIRCRAFT",
   "title": "Cessna 152X",
   "manufacturer": "Textron Aviation",
-  "creator": "Steven",
-  "package_version": "0.1.47",
+  "creator": "DRF30q",
+  "package_version": "0.0.10",
   "minimum_game_version": "1.7.12",
   "release_notes": {
     "neutral": {
