--- a/C152X/SimObjects/Airplanes/Asobo_C152/aircraft.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/aircraft.cfg
@@ -60,7 +60,7 @@ ui_manufacturer = "TT:AIRCRAFT.UI_MANUFACTURER" ; e.g. Boeing, Cessna
 ui_type = "TT:AIRCRAFT.UI_MODEL" ; e.g. 747-400, 172
 ui_variation = "TT:AIRCRAFT.LIVERY.DEFAULT" ; e.g. World Air, IFR Panel
 ui_typerole = "Single Engine Prop" ; e.g. Single Engine Prop, Twin Engine Prop, Rotorcraft, etc
-ui_createdby = "A Pointless Peasant" ; e.g. Asobo Studio, Microsoft, FSAddonCompany, etc
+ui_createdby = "Asobo/C152X" ; e.g. Asobo Studio, Microsoft, FSAddonCompany, etc
 ui_thumbnailfile = "" ; app relative path to ThumbNail image file
 ui_certified_ceiling = 14700 ; service ceiling / max certified operating altitude (ft)
 ui_max_range = 690 ; max distance the aircraft can fly between take-off and landing in (NM) ;long range tanks
