--- a/C152X/SimObjects/Airplanes/Asobo_C152/aircraft.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/aircraft.cfg
@@ -47,7 +47,7 @@ touchdown = fx_tchdwn_s, 1
 ;===================== FLTSIM =====================
 
 [FLTSIM.0]
-title = "Cessna 152X" ; Variation name
+title = "Cessna 152 Asobo" ; Variation name
 model = "" ; model folder
 panel = "" ; panel folder
 sound = "" ; sound folder
