Retuned flight performance

--- a/C152X/SimObjects/Airplanes/Asobo_C152/engines.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/engines.cfg
@@ -69,7 +69,7 @@ radiator_heating_constant = 670
 radiator_tc = 0.02
 radiator_tuning_constant = 1
 magneto_order_left_right_both = 0
-engine_mechanical_efficiency_table = 0:0.17, 700:0.77, 2300:0.77, 2553:0.67, 2700:0.6 ;**SG updated
+engine_mechanical_efficiency_table = 0:0.17, 700:0.75, 1750:0.81, 2200:0.68, 2553:0.66, 2700:0.60 ;**SG updated
 engine_friction_table = -300:-50, 300:50, 500:25, 2553:31 ;**SG updated
 manifold_efficiency_table = 0:0.2, 1:0.97
 rpm_to_oil_pressure_table = 0:0, 0.1:0.2, 0.2:0.5, 0.7:1 ;**SG updated
@@ -98,7 +98,7 @@ egt_delta_from_mixture_ratio = 0.043:-100, 0.05:-89.7, 0.067:-50, 0.07:0, 0.075:
 carb_icing_sensiblity = 0.25 ; from 0 for no icing to 1 for full sebsibility
 
 [PROPELLER]
-thrust_scalar = 1.2 ; Propeller thrust scalar  **SG updated was 1.2
+thrust_scalar = 1 ; Propeller thrust scalar  **SG updated was 1.2
 propeller_type = 1 ; 0=Constant Speed, 1=Fixed Pitch
 propeller_diameter = 5.75 ; Propeller Diameter, (feet)  **SG updated originally 5.9
 propeller_blades = 2 ; Number of propeller blades
