ADF/NAVCOM/Audio Panel

--- a/C152X/SimObjects/Airplanes/Asobo_C152/systems.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/systems.cfg
@@ -29,11 +29,12 @@ hydraulic_system_scalar = 0 ; On brakes dependant on the hydraulic system, ratio
 bus.1 = Name:MAIN_BUS
 bus.2 = Connections:bus.1#Name:AVIONICS_BUS
 battery.1 = Connections:bus.1#Capacity:15.5#Voltage:curve.1#Name:MAIN_BATTERY ; Main Battery  RW options -  17Ah, 15.5Ah or 12.75Ah
-alternator.1 = Connections:bus.1#iEng:0#Voltage:curve.3#Load:curve.2
+alternator.1 = Connections:bus.1#iEng:0#Voltage:curve.3#Load:curve.2#Name:Main_Alternator
 ;         0:24.2, 0.1:24.3, 0.3:24.7, 0.5:25.3,	0.9:26.2,	1:26.3	- NO LOAD battery voltage
 curve.1 = 0:15.0, 0.1:18.5, 0.3:21.0, 0.5:22.5, 0.9:23.2, 1:24 ; Battery voltage for capacity % (UNDER ASSUMED LOAD)
 ;curve.1 = 0:5.0, 0.1:6, 0.3:7.0, 0.5:10.0, 0.9:15.0, 1:24 ; Battery voltage for capacity % (UNDER ASSUMED LOAD) test curve -fast discharge
 curve.2 = 500:8,  1000:30,   1400:55,   2000:60      ; Load from RPM table 30A at idle speed & 60 at max rpm
+;curve.2 = 0.08:0, 0.09:8, 0.15:52, 0.22:70 ; Load from RPM table (asobo post patch)
 curve.3 = 500:10, 1000:26.0, 1400:27.4, 2000:28.0    ; Alternator Voltage from RPM
 circuit.1  = Type:CIRCUIT_STARTER				   #Connections:bus.1		#Power:2035, 3135, 21.5		#Name:Starter_1 ; Starter 
 circuit.2  = Type:CIRCUIT_GENERAL_PANEL	   #Connections:bus.1		#Power:16.9,   20, 18.9		#Name:General_Panel ; General panel
@@ -72,7 +73,7 @@ circuit.31 = Type:CIRCUIT_LIGHT_RECOGNITION	#Connections:bus.1	#Power:0, 			0, 1
 circuit.32 = Type:CIRCUIT_LIGHT_WING			#Connections:bus.1		#Power:0, 			0, 10.0		#Name:Wing_Light ; not used
 circuit.33 = Type:CIRCUIT_LIGHT_LOGO			#Connections:bus.1		#Power:0, 			0, 10.0		#Name:Logo_Light ; not used
 circuit.34 = Type:CIRCUIT_LIGHT_TAXI			#Connections:bus.1		#Power:172, 	190, 21.6		#Name:Taxi_Light ; taxi light
-;circuit.35 = Type:CIRCUIT_XML:1						#Connections:bus.2		#Power:10, 15, 10.0			#Name:AS92
+;circuit.35 = Type:CIRCUIT_XML:1						#Connections:bus.1		#Power:5000, 	500, 27.9		#Name:Dummy1
 
 
 [HYDRAULIC_SYSTEM]
