--- a/C152X/SimObjects/Airplanes/Asobo_C152/cockpit.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/cockpit.cfg
@@ -312,6 +312,18 @@ turn_indicator.0 = 1,1 ; Turn AND Bank
 [DIRECTION_INDICATORS]
 direction_indicator.0 = 1,0
 
+;Level flight Flap Up
+;KIAS	40	50	60	70	80	90	100	110	120	130	140
+;KCAS	46	53	60	69	78	88	 97	107	117	127	136
+;
+;From earlier SDK.
+;This section is used to define the characteristics of the airspeed indicators on the instrument panels.
+;The list of indicators should be listed in order: 0,1,2,..n.
+;These characteristics define the calibration between calibrated airspeed and indicated airspeed.
+;The first parameter is a scalar on the calibrated airspeed, and the second is an offset in knots.
+;The offset is applied first, then the scalar.  The default value for the scalar is 1.0 and the default for the
+;offset is 0.0, thus by default, indicated airspeed is equal to calibrated airspeed.  example. Maule M7 1.3, -24.0
+;
 [AIRSPEED_INDICATORS]
 airspeed_indicator.0 = 1.21, -14.91
 airspeed_indicator.1 = 1.21, -14.91
