Fixed: Can't start the engine with the Logiteck multipanel

--- a/C152X/SimObjects/Airplanes/Asobo_C152/engines.cfg
+++ b/C152X/SimObjects/Airplanes/Asobo_C152/engines.cfg
@@ -25,7 +25,7 @@ max_indicated_rpm = 3500
 fuel_metering_type = 1 ; 0=Fuel Injected, 1=Gravity Carburetor, 2=Aerobatic Carburetor
 cooling_type = 0 ; 0=Cooling type Air, 1=Cooling type Liquid
 normalized_starter_torque = 0.2 ; Starter torque factor **SG updated was 0.3
-starter_time = 0.55 ; Time the Starter stays active when pressed **SG updated was 1.5
+starter_time = 1.5 ; Time the Starter stays active when pressed
 turbocharged = 0 ; Is it turbocharged? 0=FALSE, 1=TRUE
 max_design_mp = 0 ; Max design manifold pressure, (inHg)
 min_design_mp = 0 ; Min design manifold pressure, (inHg)
